packages/edxml-test-corpus/edxml_test_corpus-3.0.0.dev2-py3-none-any.whl/edxml_test_corpus/tests/invalid/structure/event-without-preceding-ontology.edxml
<?xml version="1.0" encoding="UTF-8"?>
<!--

Testing event structure validation, verify
if events without a preceding ontology element are rejected.

-->
<edxml xmlns="http://edxml.org/edxml" version="3.0.0">
  <event event-type="a" source-uri="/test/">
    <properties>
      <a>1</a>
    </properties>
  </event>
</edxml>
